# dworshak-secret

./: .gitignore  .key  .key2  LICENSE  README.md  del.txt  key_file.txt  pyproject.toml  q  vault.db
.github/workflows/: ci.yml  publish.yml
docs/: CHANGELOG.md  CONTRACT.md
src/dworshak-access/: __init__.py  vault_util.py
src/dworshak_access/: __init__.py  key.py  paths.py  security.py  vault.py
src/dworshak_secret/: VERSION  __init__.py  __main__.py  _version.py  actions.py  cli.py  cli_stdlib.py  core.py  core_old.py  errors.py  fingerprint.py  key.py  legacy.py  logging_setup.py  paths.py  registry.py  security.py  vault.py
src/dworshak_secret/crypto/: base.py  fernet.py
tests/: conftest.py  test_check_vault.py  test_get_secret.py  test_initialize_vault.py  test_resolve_key.py  test_set_get.py
