[project]
name = "dworshak-access"
version = "0.1.0"
description = "**dworshak-access** is a lightweight library. It exposes the **get_secrets()** function, to allow a program to leverage credentials that have been established using the Drowshak CLI tool, which is a separate package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
]
