[project]
name = "dworshak-access"
version = "0.1.22"
description = "**dworshak-access** is a light-weight library for local credential access. It exposes the **get_secret()** function, to allow a program to leverage credentials that have been established using the Drowshak CLI tool, which is a separate package."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=46.0.3",
]

authors = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
maintainers = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


keywords = [
    "credentials",
    "security"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/dworshak-access"
Repository = "https://github.com/city-of-memphis-wastewater/dworshak-access"


[tool.uv]
# This tells uv that if it can't find a wheel for aarch64,
# it is allowed to build from source using your local Rust/Clang.
package = true
resolution = "highest"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
