[project]
name = "dworshak-secret"
#version = "x.x.x" 
dynamic = ["version"] # look in src/dworshak_secret/VERSION
description ="`dworshak-secret` is a light-weight library for local credential access. By adding `dworshak-secret` as a dependency to your Python project, you enable your program or script to leverage secure credentials."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyhabitat>=1.2.2",
]

authors = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
maintainers = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    #"Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
]

keywords = [
    "credentials",
    "security",
    "dworshak",
    "Fernet"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/dworshak-secret"
Repository = "https://github.com/city-of-memphis-wastewater/dworshak-secret"

[project.scripts]
dworshak-secret = "dworshak_secret.__main__:run"

[project.optional-dependencies]
crypto = [
    "cryptography>=46.0.3",
]
typer = [
    "typer>=0.21.1",
    "rich>=14.3.2",
    "typer-helptree>=0.2.6",
]
full = [
    "dworshak-secret[crypto,typer]"
]

[tool.uv]
# This tells uv that if it can't find a wheel for aarch64,
# it is allowed to build from source using your local Rust/Clang.
package = true
resolution = "highest"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/dworshak_secret/VERSION"}
